--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "@typescript-eslint/parser": "^3.3.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint": "^7.3.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "install": "^0.13.0",
+    "jest": "^26.0.1",
     "npm": "^6.14.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
