--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "chance": "^1.1.6",
     "env": "0.0.2",
     "express": "^4.17.1",
     "mongoose": "^5.9.19",
