--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -d --watch",
     "start": "nodemon server",
+    "eslint": "eslint ./",
     "seed": "node database/seed.js"
   },
   "repository": {
@@ -25,17 +26,14 @@
     "@babel/node": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
-    "eslint": "^7.3.0",
+    "eslint": "7.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "install": "^0.13.0",
     "jest": "^26.0.1",
     "npm": "^6.14.5",
     "webpack": "^4.43.0",
