--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack -d --watch",
     "start": "nodemon server",
     "eslint": "eslint ./",
@@ -45,6 +45,7 @@
     "body-parser": "^1.19.0",
     "chance": "^1.1.6",
     "env": "0.0.2",
+    "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
