--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "build": "webpack -d --watch",
     "start": "nodemon server",
     "eslint": "eslint ./",
@@ -22,10 +22,10 @@
   },
   "homepage": "https://github.com/Seattle-Navigators/tripadvisor_NearByAttractions_Jim#readme",
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/node": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
+    "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
     "eslint": "7.2.0",
@@ -34,7 +34,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "jest": "^26.0.1",
+    "jest": "^26.1.0",
     "npm": "^6.14.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
