--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "type": "git",
     "url": "git+https://github.com/Seattle-Navigators/tripadvisor_NearByAttractions_Jim.git"
   },
+  "jest": {
+    "projects": [
+      "specs/enzymeTests/jest.config.js",
+      "specs/nodeTests/jest.config.js"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -46,12 +52,15 @@
     "chance": "^1.1.6",
     "env": "0.0.2",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.17.1",
+    "jest-enzyme": "^7.1.2",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "path": "^0.12.7",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-test-renderer": "^16.13.1"
   }
 }
