--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           steps:
             - run: npm install
             - run: npm test
-            - run: npx eslint ./
+            - run: npm eslint
 workflows:
     build-and-test:
       jobs:
