Updates require statements to match capitalizations

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
       name: node/default
     steps:
       - checkout
+      - run:
+          name: Wait for Mongo to start
+          command: dockerize -wait tcp://127.0.0.1:27017 -timeout 120s
       - node/with-cache:
           steps:
             - run: npm install
