--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           steps:
             - run: npm install
             - run: npm test
-            - run: eslint --ext .jsx .
+            - run: npx eslint ./ --ext .jsx
 workflows:
     build-and-test:
       jobs:
