--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.17.1",
     "geolib": "^3.3.1",
+    "google-maps-react": "^2.0.6",
     "jest-enzyme": "^7.1.2",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
