--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-plugin-react-hooks": "^4.0.4",
     "jest": "^26.1.0",
     "npm": "^6.14.5",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
