--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-rating": "^2.0.5",
     "react-test-renderer": "^16.13.1"
   }
