adds dockerfiles and fixes endpoints

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
-    "build": "webpack -d --watch",
-    "start": "nodemon server",
+    "watch": "-d --watch",
+    "build": "webpack",
+    "start": "node server/index.js && node database/seed.js ",
     "eslint": "eslint --ext .jsx .",
     "seed": "node database/seed.js"
   },
@@ -105,6 +106,7 @@
     "jest-enzyme": "^7.1.2",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
+    "node": "14.5.0",
     "nodemon": "^2.0.4",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
