--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.0.7"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
