--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "geolib": "^3.3.1",
     "jest-enzyme": "^7.1.2",
     "mongoose": "^5.9.19",
@@ -110,11 +111,16 @@
     "node": "14.5.0",
     "nodemon": "^2.0.4",
     "path": "^0.12.7",
+    "pg": "^8.2.2",
+    "pg-hstore": "^2.3.3",
+    "pgtools": "^0.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "react-rating": "^2.0.5",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.13.1",
+    "sequelize": "^6.3.0",
+    "sequelize-pool": "^6.0.0"
   }
 }
