--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@react-google-maps/api": "^1.9.7",
+    "arangojs": "^6.14.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "chance": "^1.1.6",
