--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "jest-enzyme": "^7.1.2",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
+    "newrelic": "^6.11.0",
     "node": "14.5.0",
     "nodemon": "^2.0.4",
     "path": "^0.12.7",
